fix: increase title spacing in side panel without subtitle

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -114,8 +114,12 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     position: sticky;
     z-index: 4;
     top: 0;
-    padding: $spacing-05 $spacing-05 $spacing-03 $spacing-05;
+    padding: $spacing-05;
     background-color: $layer-01;
+
+    &:has(~ .#{$block-class}__subtitle-text) {
+      padding-bottom: $spacing-03;
+    }
 
     &:has(.#{$block-class}__navigation-back-button) {
       padding-top: $spacing-07;
